--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,33 @@
 #app-container {
     display: flex;
+    flex-direction: column;
+}
+#odsy-header {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgb(107, 139, 107);
+    border-bottom: 3px solid gray;
+    width:100%;
+    height: 70px;
+    font-size: 48px;
+    font-family: monospace;
+    color: bisque;
 }
 
 #data-table-container {
     flex: 1 0 auto;
     padding: 12px;
-    max-width: 100%;
+    min-width: 90%;
     align-self: center;
     justify-self: center;
-    flex-shrink: 0;
+}
+
+#file-upload-button {
+    border-radius: 4px;
+    width: 150px;
+    height: 45px;
+    align-self: center;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: rgb(220, 243, 229);
 }
