--- a/src/App.css
+++ b/src/App.css
@@ -33,22 +33,17 @@
     align-items: center;
 }
 
+#file-submit {
+    width: 150px;
+    height: 30px;
+}
+
+.form-element {
+    align-self: center;
+    margin: 16px 0px;
+}
+
 #file-upload-form {
     display: flex;
     flex-direction: column;
-}
-
-#file-upload-button {
-    border-radius: 4px;
-    width: 150px;
-    height: 45px;
-    align-self: center;
-    font-size: 20px;
-    font-weight: 400;
-    background-color: rgb(220, 243, 229);
-}
-
-#file-upload-submit {
-    border-radius: 4px;
-
 }
